--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ body
 	min-height: 100vh;
 	flex-direction: column;
 	background: #23242a;
+	background: url(bg1.jpg);
 }
 .box 
 {
@@ -157,15 +158,23 @@ h2
 }
 input[type="submit"]
 {
-	border: none;
-	outline: none;
-	padding: 11px 25px;
-	background: #45f3ff;
+	font-size: 1em ;
+    color: #fff;
+    background: #45f3ff;
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 2px;
+    transition: 0.5s;
 	cursor: pointer;
-	border-radius: 4px;
-	font-weight: 600;
-	width: 100px;
-	margin-top: 10px;
+}
+
+input[type="submit"]:hover
+{
+    letter-spacing: 6px;
+}
 }
 input[type="submit"]:active 
 {
